[gd_scene load_steps=29 format=3 uid="uid://blqvvu0ytchcd"]

[ext_resource type="Script" uid="uid://b0o2o27qxmxw4" path="res://actors/pawns/generic/pawn.gd" id="1_6lqgw"]
[ext_resource type="Script" uid="uid://bptrhmi4tcomm" path="res://ai/state_machine.gd" id="2_ixsl6"]
[ext_resource type="Script" uid="uid://dt4kadfyw2ywh" path="res://actors/pawns/zombie/zombie_target.gd" id="4_ymihc"]
[ext_resource type="Script" uid="uid://cskdd0xcjjmfc" path="res://actors/pawns/zombie/states/zombie_wander.gd" id="6_cthrv"]
[ext_resource type="Script" uid="uid://bbflvir0kv6hb" path="res://ai/state_machine_debug.gd" id="7_3fose"]
[ext_resource type="Script" uid="uid://b1vk2g6nxw2g" path="res://actors/pawns/zombie/states/zombie_chase.gd" id="7_qpxon"]
[ext_resource type="Script" uid="uid://gyp8bshfrfoj" path="res://actors/pawns/generic/health.gd" id="8_23tyx"]
[ext_resource type="Script" uid="uid://y6xyi4gu5uqa" path="res://actors/pawns/zombie/states/zombie_last_seen.gd" id="8_uotjo"]
[ext_resource type="PackedScene" uid="uid://dfb3edd4wnnag" path="res://actors/pawns/character_sprite.tscn" id="9_culwy"]
[ext_resource type="Script" uid="uid://dn7fydgbbk3wg" path="res://actors/pawns/zombie/zombie_death.gd" id="9_oyhgy"]
[ext_resource type="Script" uid="uid://bdpo0eyqlq8re" path="res://actors/pawns/zombie/states/zombie_attack.gd" id="9_ubgnx"]
[ext_resource type="Script" uid="uid://cjnn80jlwilpx" path="res://actors/pawns/zombie/states/zombie_nexus.gd" id="10_drpw1"]
[ext_resource type="Texture2D" uid="uid://doueacum5bmne" path="res://actors/pawns/sprites/head/head_zombie_1.png" id="10_mmehc"]
[ext_resource type="Texture2D" uid="uid://diqa5jjgkpomp" path="res://actors/pawns/sprites/torso/torso_zombie.png" id="11_eew4g"]
[ext_resource type="Texture2D" uid="uid://bcrncjn0sri3i" path="res://actors/pawns/sprites/hand/hands_zombie_1.png" id="12_b6tq7"]
[ext_resource type="Script" uid="uid://c8dnwtjdg5wbq" path="res://audio/footsteps.gd" id="13_mmehc"]
[ext_resource type="Script" uid="uid://b7nergdxei2p6" path="res://actors/pawns/zombie/zombie_arms.gd" id="18_ubgnx"]
[ext_resource type="Script" uid="uid://kesirm75pc1q" path="res://item/generic/equipment.gd" id="18_xnimh"]
[ext_resource type="Script" uid="uid://dflsf7ovo0jqw" path="res://item/generic/item_display.gd" id="19_ld5a4"]
[ext_resource type="Script" uid="uid://c816dagnqn6re" path="res://actors/pawns/zombie/zombie_item.gd" id="20_cthrv"]
[ext_resource type="Resource" uid="uid://6rsgvhonqx4b" path="res://item/items/zombie/zombie_attack.tres" id="21_cthrv"]
[ext_resource type="Script" uid="uid://bnk868k5qp3nb" path="res://actors/pawns/nav_target_provider.gd" id="23_cthrv"]
[ext_resource type="Script" uid="uid://c8vlygcerjqvb" path="res://actors/pawns/generic/hurt_sound.gd" id="24_41tli"]
[ext_resource type="Script" uid="uid://dg8qbly1ndg5w" path="res://actors/pawns/generic/player_tracker.gd" id="26_buy8w"]
[ext_resource type="Script" uid="uid://dbgqumwhqtmf6" path="res://actors/pawns/generic/tile_pathfind.gd" id="27_sonq4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_roy8y"]
radius = 376.0053

[sub_resource type="CircleShape2D" id="CircleShape2D_jmu02"]
radius = 120.203995

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fose"]
size = Vector2(36, 72)

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_6lqgw")
faction = 2

[node name="CharacterSprite" parent="." node_paths=PackedStringArray("target_supplier") instance=ExtResource("9_culwy")]
target_supplier = NodePath("../NavTargetProvider")
head_texture = ExtResource("10_mmehc")
torso_texture = ExtResource("11_eew4g")
left_arm_texture = ExtResource("12_b6tq7")
right_arm_texture = ExtResource("12_b6tq7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_roy8y")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_jmu02")

[node name="ZombieStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_ixsl6")
initial_state = NodePath("Nexus")
metadata/_custom_type_script = "uid://bptrhmi4tcomm"

[node name="Wander" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("player_tracker", "character", "tile_pathfind", "target")]
script = ExtResource("6_cthrv")
player_tracker = NodePath("../../PlayerTracker")
character = NodePath("../..")
tile_pathfind = NodePath("../../TilePathfind")
target = NodePath("../../ZombieTarget")

[node name="Chase" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "obstruction_raycast", "nav", "target")]
script = ExtResource("7_qpxon")
chase_speed = 130
character = NodePath("../..")
obstruction_raycast = NodePath("../../ObstructionRaycast")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Last_Seen" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "player_tracker", "nav", "target")]
script = ExtResource("8_uotjo")
speed = 100
character = NodePath("../..")
player_tracker = NodePath("../../PlayerTracker")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Attack" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "equipment", "attack_area", "nav", "target")]
script = ExtResource("9_ubgnx")
character = NodePath("../..")
equipment = NodePath("../../Items/Equipment")
attack_area = NodePath("../../AttackArea")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Nexus" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("tile_pathfind", "player_tracker", "zombie_target")]
script = ExtResource("10_drpw1")
tile_pathfind = NodePath("../../TilePathfind")
player_tracker = NodePath("../../PlayerTracker")
zombie_target = NodePath("../../ZombieTarget")

[node name="ZombieTarget" type="Node2D" parent="."]
script = ExtResource("4_ymihc")

[node name="PlayerRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 6

[node name="ObstructionRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 2

[node name="StateMachineDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_3fose")
state_machine = NodePath("../ZombieStateMachine")
metadata/_custom_type_script = "uid://bbflvir0kv6hb"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_3fose")

[node name="Health" type="Node" parent="."]
script = ExtResource("8_23tyx")
max_health = 1
metadata/_custom_type_script = "uid://gyp8bshfrfoj"

[node name="ZombieDeath" type="Node" parent="." node_paths=PackedStringArray("pawn", "state_machine", "character_sprite", "state_machine_debug", "tile_pathfind")]
script = ExtResource("9_oyhgy")
pawn = NodePath("..")
state_machine = NodePath("../ZombieStateMachine")
character_sprite = NodePath("../CharacterSprite")
state_machine_debug = NodePath("../StateMachineDebug")
tile_pathfind = NodePath("../TilePathfind")
metadata/_custom_type_script = "uid://dn7fydgbbk3wg"

[node name="Items" type="Node2D" parent="."]

[node name="Equipment" type="Node" parent="Items" node_paths=PackedStringArray("user", "inst_provider", "target_provider", "item_display", "character_sprite")]
script = ExtResource("18_xnimh")
user = NodePath("../..")
inst_provider = NodePath("../ZombieItem")
target_provider = NodePath("../../ZombieTarget")
item_display = NodePath("../ItemDisplay")
character_sprite = NodePath("../../CharacterSprite")
metadata/_custom_type_script = "uid://kesirm75pc1q"

[node name="ItemDisplay" type="Node2D" parent="Items" node_paths=PackedStringArray("user", "instance_supplier", "target_supplier")]
script = ExtResource("19_ld5a4")
user = NodePath("../..")
instance_supplier = NodePath("../ZombieItem")
target_supplier = NodePath("../../NavTargetProvider")
metadata/_custom_type_script = "uid://dflsf7ovo0jqw"

[node name="ZombieItem" type="Node2D" parent="Items"]
script = ExtResource("20_cthrv")
data = ExtResource("21_cthrv")
metadata/_custom_type_script = "uid://c816dagnqn6re"

[node name="ZombieArms" type="Node2D" parent="."]
script = ExtResource("18_ubgnx")

[node name="NavTargetProvider" type="Node2D" parent="." node_paths=PackedStringArray("agent")]
script = ExtResource("23_cthrv")
agent = NodePath("../NavigationAgent2D")
metadata/_custom_type_script = "uid://bnk868k5qp3nb"

[node name="HurtSound" type="Node2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("24_41tli")
health = NodePath("../Health")
death = 7
metadata/_custom_type_script = "uid://c8vlygcerjqvb"

[node name="PlayerTracker" type="Node2D" parent="." node_paths=PackedStringArray("vision", "player_raycast")]
script = ExtResource("26_buy8w")
vision = NodePath("../Vision")
player_raycast = NodePath("../PlayerRaycast")
metadata/_custom_type_script = "uid://dg8qbly1ndg5w"

[node name="TilePathfind" type="Node2D" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("27_sonq4")
body = NodePath("..")
metadata/_custom_type_script = "uid://dbgqumwhqtmf6"

[node name="Footsteps" type="Node2D" parent="." node_paths=PackedStringArray("character_sprite")]
script = ExtResource("13_mmehc")
character_sprite = NodePath("../CharacterSprite")
metadata/_custom_type_script = "uid://c8dnwtjdg5wbq"

[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_left_hand"]
[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_right_hand"]
[connection signal="target_emitted" from="ZombieStateMachine/Chase" to="ZombieArms" method="_set_target"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_left_hand_pos"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_right_hand_pos"]
[connection signal="died" from="Health" to="ZombieDeath" method="_on_death"]
[connection signal="left_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_left_hand_pos"]
[connection signal="right_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_right_hand_pos"]
